    Issue #722 by Hanmac.
  * Now :all is a synonym for :private for RDoc::Options#visibility= to match
    the --all command line option.  Pull request #276 by Zachary Scott.
  * Running rake for the first time now installs racc.  Pull request #285 by
    Kouhei Sutou.
  * Added <code>-h</code> flag to also display help.  Issue #300 by Ryan Davis

* Bug fixes
  * RDoc handles ASCII-incompatible encodings now.  An encoding hint may need
    to be added to the file for RDoc to produce correct output, though.
    Issue #288 by Manuel Meurer.
  * Fixed height recalculation issues when headings are hovered.  Issue #289
    by Dietmar H. Büto.
  * Added pointer to font copyright and license information to LEGAL.rdoc.
    Issue #290 by Christian Hofstaedtler.
  * Fixed RDoc::Context#<=> for ruby trunk.  Issue #284 by Hanmac, pull
    request #287 by Aaron Patterson
  * Tests no longer create directories inside test/.  Pull request #286 by
    Kouhei Sutou.
  * Fixed documentation example in RDoc::Markup.  Pull request #292 by Gregory
    Brown.
  * Applied typo fix to RDoc::Markup. Pull request #297 by @montanalow

=== 4.1.1 / 2014-01-09

* Bug fixes
  * Fixed reporting of undocumented method parameters when including when
    yield and &block are present.  Pull request #281 by Victor Bilyk.
  * Fixed merging of rd-style and hash-style comments at the top of a file.
    Bug #266 by Zachary Scott.
  * Fixed Document-attr in the C parser.  Bug #271 by Hanmac.
  * Removed duplicated condition in superclass fixup.  Pull request #282 by
    Benoit Daloze.

=== 4.1.0 / 2013-12-26

* Notable changes
  * Improved accessibility of HTML output.  Accessibility review was provided
    by:

    Techvision – http://www.techvision.net.in

    The accessibility consultants in Pune, India

  * The look of RDoc has been updated.

* Minor enhancements
  * RDoc can now link to [], []=, << and >> methods.  Pull request #202 by
    Jeremy Evans, Bug # 191 by by Zachary Scott.