@@ -121,11 +121,41 @@ function highlightClickTarget( event ) {
   };
 };
 
+function loadAsync(path, success) {
+  $.ajax({
+    url: rdoc_rel_prefix + path,
+    dataType: 'script',
+    success: success,
+    cache: true
+  });
+};
 
 $(document).ready( function() {
   hookSourceViews();
-  hookSearch();
   highlightLocationTarget();
-
   $('ul.link-list a').bind( "click", highlightClickTarget );
+
+  var search_scripts_loaded = {
+    navigation_loaded:   false,
+    search_loaded:       false,
+    search_index_loaded: false,
+    searcher_loaded:     false,
+  }
+
+  var search_success_function = function(variable) {
+    return (function (data, status, xhr) {
+      search_scripts_loaded[variable] = true;
+
+      if (search_scripts_loaded['navigation_loaded']   == true &&
+          search_scripts_loaded['search_loaded']       == true &&
+          search_scripts_loaded['search_index_loaded'] == true &&
+          search_scripts_loaded['searcher_loaded']     == true)
+        hookSearch();
+    });
+  }
+
+  loadAsync('js/navigation.js',   search_success_function('navigation_loaded'));
+  loadAsync('js/search.js',       search_success_function('search_loaded'));
+  loadAsync('js/search_index.js', search_success_function('search_index_loaded'));
+  loadAsync('js/searcher.js',     search_success_function('searcher_loaded'));
 });
